--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 clap = { version = "4.5.23", features = ["derive"] }
 glob = "0.3.1"
 markdown = "1.0.0-alpha.21"
+walkdir = "2.5.0"
