--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
+colored = "2.1.0"
 ignore = "0.4.23"
 markdown = "1.0.0-alpha.21"
 miette = { version = "7.4.0", features = ["fancy"] }
