--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ colored = "2.1.0"
 ignore = "0.4.23"
 markdown = "1.0.0-alpha.21"
 miette = { version = "7.4.0", features = ["fancy"] }
+regex = "1.11.1"
