--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
 colored = "2.1.0"
+comrak = "0.31.0"
 crossbeam-channel = "0.5.13"
 ignore = "0.4.23"
 markdown = "1.0.0-alpha.21"
