--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Run tests
         run: cargo test --all-features --workspace
         env:
+          CLICOLOR_FORCE: true
           TZ: 'Asia/Tokyo'
 
   rustfmt:
