--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "downlint"
+description = "A fast Markdown linter."
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/akiomik/downlint"
+license = "Apache-2.0"
+authors = ["Akiomi Kamakura <akiomik@gmail.com>"]
+keywords = ["markdown", "lint"]
+categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
@@ -16,6 +22,7 @@ regex = "1.11.1"
 lto = "thin"
 
 [lints.clippy]
+cargo = { level = "warn", priority = -1 }
 complexity = { level = "warn", priority = -1 }
 correctness = { level = "warn", priority = -1 }
 perf = { level = "warn", priority = -1 }
@@ -46,3 +53,4 @@ integer_division_remainder_used = "allow"
 missing_errors_doc = "allow"
 missing_panics_doc = "allow"
 missing_docs_in_private_items = "allow"
+multiple_crate_versions = "allow"
