Use mimalloc and tikv-jemallocator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,12 @@ ignore = "0.4.23"
 miette = { version = "7.4.0", features = ["fancy"] }
 regex = "1.11.1"
 
+[target.'cfg(target_os = "windows")'.dependencies]
+mimalloc = "0.1.39"
+
+[target.'cfg(all(not(target_os = "windows"), not(target_os = "openbsd"), not(target_os = "aix"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "powerpc64")))'.dependencies]
+tikv-jemallocator = "0.6.0"
+
 [profile.release]
 lto = "thin"
 
