--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ crossbeam-channel = "0.5.14"
 ignore = "0.4.23"
 miette = { version = "7.4.0", features = ["fancy"] }
 regex = "1.11.1"
+serde = { version = "1.0", features = ["derive"]  }
+toml = "0.8.19"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 mimalloc = "0.1.39"
