--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ mimalloc = "0.1.39"
 [target.'cfg(all(not(target_os = "windows"), not(target_os = "openbsd"), not(target_os = "aix"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "powerpc64")))'.dependencies]
 tikv-jemallocator = "0.6.0"
 
+[dev-dependencies]
+pretty_assertions = "1"
+
 [profile.release]
 lto = "thin"
 
