--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "4.5.23", features = ["derive"] }
 colored = "2.2.0"
 comrak = "0.32.0"
 crossbeam-channel = "0.5.14"
+etcetera = "0.8.0"
 ignore = "0.4.23"
 miette = { version = "7.4.0", features = ["fancy"] }
 regex = "1.11.1"
