--- a/scripts/benchmarks/.markdownlint.jsonc
+++ b/scripts/benchmarks/.markdownlint.jsonc
@@ -21,5 +21,9 @@
   "MD026": true,
   "MD027": true,
   "MD028": true,
-  "MD029": true
+  "MD029": true,
+  "MD030": true,
+  "MD031": true,
+  "MD032": true,
+  "MD033": true
 }
