--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ comrak = "0.32.0"
 crossbeam-channel = "0.5.14"
 etcetera = "0.8.0"
 ignore = "0.4.23"
+linkify = "0.10.0"
 miette = { version = "7.4.0", features = ["fancy"] }
 regex = "1.11.1"
 scraper = "0.22.0"
