--- a/downlint.toml
+++ b/downlint.toml
@@ -28,6 +28,7 @@ rules = [
   "MD032",
   "MD033",
   "MD034",
+  "MD036",
 ]
 
 [lint.md002]
@@ -62,3 +63,6 @@ ol_multi = 1
 
 [lint.md033]
 allowed-elements = []
+
+[lint.md036]
+punctuation = ".,;:!?"
