--- a/scripts/benchmarks/package.json
+++ b/scripts/benchmarks/package.json
@@ -2,6 +2,7 @@
   "name": "downlint-benchmark",
   "private": true,
   "dependencies": {
-    "markdownlint-cli": "^0.43.0"
+    "markdownlint-cli": "^0.43.0",
+    "markdownlint-cli2": "^0.16.0"
   }
 }
