--- a/downlint.toml
+++ b/downlint.toml
@@ -28,6 +28,7 @@ rules = [
   "MD032",
   "MD033",
   "MD034",
+  "MD035",
   "MD036",
   "MD037",
   "MD038",
@@ -70,6 +71,9 @@ ol_multi = 1
 
 [lint.md033]
 allowed-elements = []
+
+[lint.md035]
+style = "consistent"
 
 [lint.md036]
 punctuation = ".,;:!?"
