--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,9 @@ mimalloc = "0.1.39"
 tikv-jemallocator = "0.6.0"
 
 [dev-dependencies]
-pretty_assertions = "1"
 criterion = "0.5"
+pretty_assertions = "1"
+rand = "0.8"
 
 [profile.release]
 lto = "thin"
