--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,19 @@ version = "0.1.0"
 edition = "2021"
 repository = "https://github.com/akiomik/mado"
 license = "Apache-2.0"
+license-file = "LICENSE"
 authors = ["Akiomi Kamakura <akiomik@gmail.com>"]
 keywords = ["markdown", "lint"]
 categories = ["command-line-utilities", "development-tools"]
 readme = "README.md"
 exclude = [
-    "/scripts/*",
-    ".node-version",
-    ".ruby-version"
+  "/action",
+  "/scripts",
+  "/tmp",
+  ".node-version",
+  ".ruby-version",
+  "action.yml",
+  "flamegraph.svg"
 ]
 
 [dependencies]
