--- a/.github/workflows/ci-pkg.yml
+++ b/.github/workflows/ci-pkg.yml
@@ -42,3 +42,12 @@ jobs:
         uses: MinoruSekine/setup-scoop@v4.0.1
       - name: Install Mado via Scoop
         run: scoop install pkg\scoop\mado.json
+
+  nix:
+    name: Test Nix
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v4
+        - uses: cachix/install-nix-action@v27
+        - run: nix build
+        - run: nix flake check
