--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ correctness = { level = "warn", priority = -1 }
 perf = { level = "warn", priority = -1 }
 suspicious = { level = "warn", priority = -1 }
 pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
 # pedantic
 module_name_repetitions = "allow"
 # restrictions
