--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ mimalloc = "0.1.39"
 tikv-jemallocator = "0.6.0"
 
 [dev-dependencies]
+assert_cmd = "2.0"
 criterion = "0.5"
 pretty_assertions = "1"
 rand = "0.8"
