--- a/mado.toml
+++ b/mado.toml
@@ -69,10 +69,10 @@ punctuation = ".,;:!?"
 style = "one"
 
 [lint.md030]
-ul_single = 1
-ol_single = 1
-ul_multi = 1
-ol_multi = 1
+ul-single = 1
+ol-single = 1
+ul-multi = 1
+ol-multi = 1
 
 [lint.md033]
 allowed-elements = []
