chore: add breaking change to .github/release.yml

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,5 +1,8 @@
 changelog:
   categories:
+    - title: ⚠️ BREAKING CHANGES
+      labels:
+        - "breaking change"
     - title: Features
       labels:
         - enhancement
