--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ exclude = [
   ".node-version",
   ".ruby-version",
   "action.yml",
-  "flamegraph.svg"
+  "flamegraph.svg",
 ]
 
 [dependencies]
@@ -29,7 +29,7 @@ linkify = "0.10.0"
 miette = { version = "7.4.0", features = ["fancy"] }
 regex = "1.11.1"
 scraper = "0.22.0"
-serde = { version = "1.0", features = ["derive"]  }
+serde = { version = "1.0", features = ["derive"] }
 toml = "0.8.19"
 
 [target.'cfg(target_os = "windows")'.dependencies]
