--- a/mado.toml
+++ b/mado.toml
@@ -3,6 +3,7 @@ respect-ignore = true
 respect-gitignore = true
 output-format = "concise"
 quiet = false
+exclude = []
 rules = [
   "MD001",
   "MD002",
