--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ clap = { version = "4.5.28", features = ["derive"] }
 colored = "3.0.0"
 comrak = "0.35.0"
 etcetera = "0.8.0"
+globset = { version = "0.4.15", features = ["serde1"] }
 ignore = "0.4.23"
 linkify = "0.10.0"
 miette = { version = "7.5.0", features = ["fancy"] }
