--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ tikv-jemallocator = "0.6.0"
 [dev-dependencies]
 assert_cmd = "2.0"
 criterion = "0.5"
+indoc = "2"
 pretty_assertions = "1"
 rand = "0.9"
 tempfile = "3.16"
