chore: enable clippy::integer_division_remainder_used

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,23 +67,23 @@ module_name_repetitions = "allow"
 # restrictions
 absolute_paths = "warn"
 blanket_clippy_restriction_lints = "warn"
+clone_on_ref_ptr = "warn"
 empty_structs_with_brackets = "warn"
 exhaustive_enums = "warn"
 exhaustive_structs = "warn"
 expect_used = "warn"
-clone_on_ref_ptr = "warn"
+integer_division_remainder_used = "warn"
 missing_inline_in_public_items = "warn"
 shadow_unrelated = "warn"
 std_instead_of_alloc = "warn"
 std_instead_of_core = "warn"
 str_to_string = "warn"
-unused_trait_names = "warn"
 unwrap_in_result = "warn"
+unused_trait_names = "warn"
 unwrap_used = "warn"
 # TODO: Enable following rules
 allow_attributes_without_reason = "allow"
 arithmetic_side_effects = "allow"
-integer_division_remainder_used = "allow"
 missing_errors_doc = "allow"
 missing_panics_doc = "allow"
 missing_docs_in_private_items = "allow"
