--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ exclude = [
 
 [dependencies]
 clap = { version = "4.5.35", features = ["derive"] }
+clap_complete = "4.5.47"
 colored = "3.0.0"
 comrak = "0.36.0"
 etcetera = "0.10.0"
