--- a/pkg/winget/mado.yml
+++ b/pkg/winget/mado.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.singleton.1.9.0.schema.json
 PackageIdentifier: AkiomiKamakura.Mado
 PackageVersion: 0.3.0
 PackageLocale: en-US
